default/objects/success__Winning_Way__c/success__Winning_Way__c.object-meta.xml
<CustomObject>
    <description>Winning Ways are required for the Prediction algorithm and must be defined for each Sales Process that is in use. Once a Winning Way has been setup, Winning Way Steps can then be created for each Sales Stage that contain the Behaviours that are to be completed.</description>
    <label>Winning Way</label>
    <nameField>
        <label>Winning Way Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Winning Ways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>