default/objects/success__Winning_Way__c/fields/success__CaseSafeRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>success__CaseSafeRecordTypeID__c</fullName>
    <formula>CASESAFEID( success__RecordTypeID__c )</formula>
    <label>CaseSafeRecordTypeID</label>
    <type>Text</type>
</CustomField>