default/objects/success__Winning_Way__c/fields/success__Field__c.field-meta.xml
<CustomField>
    <fullName>success__Field__c</fullName>
    <defaultValue>&quot;StageName&quot;</defaultValue>
    <label>Status Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>