default/objects/success__Winning_Way__c/fields/success__Inclusion_Criteria__c.field-meta.xml
<CustomField>
    <fullName>success__Inclusion_Criteria__c</fullName>
    <label>Inclusion Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>