default/objects/success__Winning_Way__c/fields/success__Object__c.field-meta.xml
<CustomField>
    <fullName>success__Object__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>