default/objects/success__Winning_Way__c/fields/success__RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>success__RecordTypeID__c</fullName>
    <label>Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>