default/objects/success__Winning_Way__c/fields/success__Success_Criteria_del__c.field-meta.xml
<CustomField>
    <fullName>success__Success_Criteria_del__c</fullName>
    <label>Success Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>